# fish_sensor_pkg

./: .gitignore
install/: local_setup.sh  setup.sh
install/fish_sensor_pkg/include/fish_sensor_pkg/: i2c_device.hpp  madgwick_filter.hpp  mpu6500.hpp
install/fish_sensor_pkg/lib/fish_sensor_pkg/: fish_sensor_node
install/fish_sensor_pkg/share/ament_index/resource_index/package_run_dependencies/: fish_sensor_pkg
install/fish_sensor_pkg/share/fish_sensor_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fish_sensor_pkg/share/fish_sensor_pkg/cmake/: fish_sensor_pkgConfig.cmake
install/fish_sensor_pkg/share/fish_sensor_pkg/launch/: fish_sensor.launch.py
log/: latest_build
src/fish_sensor_pkg/: CMakeLists.txt  package.xml
src/fish_sensor_pkg/include/fish_sensor_pkg/: as5600.hpp  mpu6500.hpp
src/fish_sensor_pkg/launch/: fish_sensor.launch.py
src/fish_sensor_pkg/params/: fish_sensor_params.yaml
src/fish_sensor_pkg/src/: as5600.cpp  fish_sensor_node.cpp  gravity_canceler_node.cpp  i2c_device.cpp  madgwick_filter.cpp  mpu6500.cpp
